# poetry_with_rust_extensions

./: .gitignore  Cargo.toml  README.md  build.py  pyproject.toml
src/: lib.rs
